# ProjectAether

./: .gitignore  Cargo.toml
src/: MapItems.rs  basic_colour.rs  battle_system.rs  camera.rs  chat.rs  collision.rs  collision_engine.rs  game_client.rs  inventory.rs  main.rs  map.rs  map1.txt  map2.txt  map_data.rs  map_factory.rs  map_manager.rs  monster.rs  monster_generator.rs  monster_id_data.rs  monster_manager.rs  node.rs  pathfinding.rs  player.rs  player_movement_data.rs  renderer.rs  scene_ladder.txt  space.rs  space_factory.rs  state.rs  status.rs  terrain_data.rs  tile_set.rs  vec2.rs
src/maps/: map1.txt  map2.txt  map3.txt  test_map.txt
