[package]
name = "ProjectAether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
crossterm = "0.27.0"
futures = "0.3.28"
ordered-float = "3.9.1"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
winit = "0.28.6"
wgpu = "0.17.0"
env_logger = "0.10.0"
log = "0.4"
pollster = "0.3.0"